# jqktrader

./: .gitignore  README.md  pyproject.toml
jqktrader/: grid_strategies.py  log.py
