[tool.poetry]
name = "jqktrader"
version = "0.1.5"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>","zjslqshqz <564964001@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
easyutils = "^0.1.7"
pandas = "^2.2.2"
pytesseract = "^0.3.10"
pywin32 = "^306"
pywinauto = "^0.6.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
